--- a/index.html
+++ b/index.html
@@ -137,15 +137,12 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>To You!</h3>
-                        <h2>On this special day, i wanted to take a moment to wish you the Happiest and most magical birthday ever! 
-You are truly one of the sweetest souls I've ever had the pleasure to knowing,bas mood swings or gussay ko chor kar even though I'll handle Lekin dar toh Hota hi mahilaa ka
-
-Your kindness, warmth and positivity light up the world around you. You have a heart of gold and your smile has the power to brighten even the darkest of days. Today, i hope all the love and joy you've given to others comeback to you in abundance.
-
-May your day filled with laughter surrounded by friends and family who adore you just as much as I do. May your dreams take flight and your aspirations be realized. This day i wish for you a world of beautiful moments adventures and endless happiness.
-
-Thank you for being a wonderful person you are.
-Happy birthday here's to celebrating you and all the incredible moment that lie ahead.❤
+                        <h2On this special day, I wish you the happiest and most magical birthday ever! 🎂✨
+You are one of the sweetest souls I’ve ever known (mood swings and gussa included 😄, I’ll handle it!).
+Your kindness, warmth, and positivity light up every room, and your smile can brighten the darkest day.
+May all the love and joy you’ve given return to you in abundance.
+Wishing you laughter, love, dreams fulfilled, and endless happiness.
+Thank you for being the wonderful person you are. ❤
                         </h2>
 
                         <div class="imageCute2">
@@ -259,4 +256,5 @@ Happy birthday here's to celebrating you and all the incredible moment that lie
 </script>
 
 </html>
+
 
